--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,4 +17,4 @@ jobs:
           node-version:
             '16'
       - run: npm install
-      - run: npm build --prefix client
+      - run: npm run build --prefix client
