--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,13 +8,18 @@ on:
       - master
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use node 16
+      - name: Use node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version:
-            '16'
+          node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --prefix client
+      - run: npm test
